[gd_scene load_steps=13 format=2]

[ext_resource path="res://instances/ui/hud.gd" type="Script" id=1]
[ext_resource path="res://font_data/monospace/droid-sans-mono.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://instances/ui/hud.tres" type="Theme" id=3]
[ext_resource path="res://font_data/oxygen/Oxygen-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://instances/ui/transition.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 36
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.933333, 0.262745, 0.262745, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.262745, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="UI" type="CanvasLayer"]
pause_mode = 2

[node name="HUD" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.176471, 0.176471, 0.176471, 1 )

[node name="Panel" type="Panel" parent="HUD"]
margin_right = 640.0
margin_bottom = 224.0
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0

[node name="Healthbar" type="HBoxContainer" parent="HUD/Panel/VBoxContainer"]
margin_right = 616.0
margin_bottom = 98.0
size_flags_vertical = 3

[node name="Health" type="Label" parent="HUD/Panel/VBoxContainer/Healthbar"]
margin_right = 74.0
margin_bottom = 98.0
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 1 )
text = "100"
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="HUD/Panel/VBoxContainer/Healthbar"]
margin_left = 78.0
margin_right = 616.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/fg = SubResource( 2 )
value = 50.0
percent_visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Panel/VBoxContainer"]
margin_top = 102.0
margin_right = 616.0
margin_bottom = 200.0
size_flags_vertical = 3

[node name="WeaponName" type="Label" parent="HUD/Panel/VBoxContainer/HBoxContainer"]
margin_right = 509.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Assault Rifle:"
align = 1
valign = 1

[node name="AmmoCount" type="Label" parent="HUD/Panel/VBoxContainer/HBoxContainer"]
margin_left = 513.0
margin_right = 616.0
margin_bottom = 98.0
size_flags_horizontal = 5
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
text = "11/20"
align = 1
valign = 1

[node name="Heatbar" type="ProgressBar" parent="HUD"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -56.0
margin_right = -8.0
margin_bottom = -8.0
theme = ExtResource( 3 )
value = 50.0
percent_visible = false

[node name="RestartLabel" type="RichTextLabel" parent="HUD"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -152.0
margin_right = 712.0
margin_bottom = -74.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "Press [color=yellow]R[/color] to restart"
text = "Press R to restart"

[node name="Transition" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Transition"]
anims/RESET = SubResource( 5 )
anims/fade_in = SubResource( 6 )
anims/fade_out = SubResource( 7 )

[node name="ColorRect" type="ColorRect" parent="Transition"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[connection signal="animation_finished" from="Transition/AnimationPlayer" to="Transition" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="Transition/AnimationPlayer" to="Transition" method="_on_AnimationPlayer_animation_started"]
